# platform.adaptation.bluetooth-firmware-bcm

./: CMakeLists.txt  LICENSE.Broadcom  NOTICE
debian/: bluetooth-firmware-bcm.install  bluetooth-firmware-bcm.postinst.in  changelog  control  rules
firmware/: CMakeLists.txt
firmware/artik_bcmtool/: brcm_patchram_plus  setbd
firmware/bcm4343w/: BCM4343A1_001.002.009.0022.0050_Murata_Type-1FR.hcd  BCM4343A1_001.002.009.0035.0096_ORC_Orbis_WC1-S.hcd
packaging/: bluetooth-firmware-bcm.spec  bluetooth-hci-device.service  bluetooth-hciattach@.service
scripts/: CMakeLists.txt  bt-dev-end.sh  bt-dev-start-artik.sh  bt-dev-start-exynos3250.sh  bt-dev-start.sh  bt-set-addr.sh
set-address/: CMakeLists.txt  setbd.c
tools/: CMakeLists.txt  bcmtool_4330b1.c  bcmtool_4330b1_m.c  bcmtool_4343w.c  bcmtool_4358a1.c
