CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(FindPkgConfig)
pkg_check_modules(package REQUIRED glib-2.0 vconf)

FOREACH(flag ${package_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

IF (TIZEN_MOBILE)
ADD_SUBDIRECTORY(set-address)
ELSE ()
IF (TIZEN_WEARABLE)
ADD_SUBDIRECTORY(set-address)
ELSE ()
ENDIF (TIZEN_WEARABLE)
ENDIF (TIZEN_MOBILE)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(firmware)
ADD_SUBDIRECTORY(scripts)
