CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(setbd C)

SET(SRCS setbd.c)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-D__BROADCOM_PATCH__")
ADD_DEFINITIONS("-DDEBUG_EN")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${package_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

